tests/0054-function-missing-comma.src.err
ERROR: Expected ',' but got 'c'
 | let foo = fun (a, b c, d, e, f) {
                       ^
