tests/0054-function-missing-comma.src
let foo = fun (a, b c, d, e, f) {
};